---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: int = const 0;
  v4: int = call @inc v1;
  print v4;
}
@inc(v0: int): int {
  v3: int = const 2;
  v5: bool = lt v0 v3;
  br v5 .__15__ .__10__;
.__15__:
  v14: int = const 1;
  v17: int = add v14 v0;
  print v17;
  v22: int = call @inc v17;
  v12: int = id v22;
  jmp .__26__;
.__10__:
  v12: int = id v0;
  jmp .__26__;
.__26__:
  ret v12;
}

